...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cactusPlant" translatesAutoresizingMaskIntoConstraints="NO" id="1Uw-UG-RdX">
                                <rect key="frame" x="0.0" y="196" width="414" height="702"/>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="slg-hM-sj8">
                                <rect key="frame" x="20" y="128" width="374" height="354"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plant Parenthood" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="XMa-A0-E0B">
                                        <rect key="frame" x="20" y="0.0" width="334" height="53"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                        <color key="textColor" red="0.16216105219999999" green="0.35744193200000002" blue="0.1495135725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RZU-bD-5Ho">
                                        <rect key="frame" x="119.5" y="76" width="135" height="32"/>
                                        <segments>
                                            <segment title="Sign Up"/>
                                            <segment title="Sign In"/>
                                        </segments>
                                        <connections>
                                            <action selector="loginTypeChanged:" destination="8O8-FC-Wrx" eventType="valueChanged" id="usQ-NO-OoL"/>
                                        </connections>
                                    </segmentedControl>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="qis-oO-rhC">
                                        <rect key="frame" x="20" y="130" width="334" height="54.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNk-v1-qWj">
                                                <rect key="frame" x="0.0" y="0.0" width="78.5" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SW4-bh-PnK">
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSG-QY-DrT">
                                        <rect key="frame" x="40" y="324" width="294" height="30"/>
                                        <color key="backgroundColor" red="0.16216105219999999" green="0.35744193200000002" blue="0.1495135725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="SIGN UP">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="8O8-FC-Wrx" eventType="touchUpInside" id="6FI-YT-Lv8"/>
                                        </connections>
                                    </button>
...
