...


    func updateViews() {
        print("update views")
        guard isViewLoaded else {return}

        title = plant?.nickName ?? "Add New Plant"
        nicknameTextField.text = plant?.nickName ?? ""
        plantSpeciesTextField.text = plant?.species ?? ""
        h2oFrequencyTextField.text = plant?.h2oFrequency ?? ""

        if plant != nil {
            saveChangesButton.setTitle("Edit Plant", for: .normal)
        }
        else {
            saveChangesButton.setTitle("Add Plant", for: .normal)
        }
    }
    
    @IBAction func saveButtonTapped(_ sender: UIButton) {
        
        guard let nickName = nicknameTextField.text, let species = plantSpeciesTextField.text else {return}
...
