...
                        <barButtonItem key="leftBarButtonItem" title="Refresh" id="Oh0-4f-xF1">
                            <connections>
                                <action selector="refresh:" destination="aey-LR-pS8" id="EEi-Md-C9z"/>
                            </connections>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem title="Item" image="plus" catalog="system" id="2XX-jz-Acw">
                                <connections>
                                    <segue destination="vFL-MW-c1B" kind="show" id="1oA-zL-dHS"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Item" image="person.circle" catalog="system" id="kDv-H9-oKX">
                                <connections>
...
